Repaso de strings, objeto math y condicionales

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1 id="h1-de-prueba">Hola comisión 15i</h1>
   <button onclick="console.log('Click en el botón')">Haceme click</button>
   <!-- <script src="js/00-intro.js"></script> -->
-  <script src="js/01-strings.js"></script>
+  <!-- <script src="js/01-strings.js"></script> -->
+  <!-- <script src="js/02-math.js"></script> -->
+  <script src="js/03-conditionals.js"></script>
 </body>
 </html>
