iterative control structures

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
-  <script src="js/03-conditionals.js"></script>
+  <!-- <script src="js/03-conditionals.js"></script> -->
+  <script src="js/04-iterations.js"></script>
 </body>
 </html>
