array methods and properties + functions

--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
 <body>
   <h1 id="h1-de-prueba">Hola comisión 15i</h1>
   <button onclick="console.log('Click en el botón')">Haceme click</button>
+  <hr>
+  <h2>Base de datos de usuarios</h2>
+  <button onclick="getDatabase()">Ver la base de datos</button>
+  <button onclick="updateUser()">Actualizar usuario</button>
+  <button onclick="deleteUser()">Borrar usuario</button>
+  <hr>
+  <h2>Calculadora</h2>
+  <button onclick="calculator()">Ejecutar calculadora</button>
+  <hr>
+  <h2>Carrito de compras</h2>
+  <button onclick="addProduct()">Agregar producto</button>
+  <button onclick="getTrolley()">Ver carrito</button>
+  <button onclick="getProductFromTrolley()">Buscar un producto del carrito</button>
+  <button onclick="findProducts()">Buscar productos</button>
+  <button onclick="removeProductFromTrolley()">Eliminar producto del carrito</button>
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
   <!-- <script src="js/03-conditionals.js"></script> -->
-  <script src="js/04-iterations.js"></script>
+  <!-- <script src="js/04-iterations.js"></script> -->
+  <!-- <script src="js/05-arrays.js"></script> -->
+  <script src="js/06-functions.js"></script>
 </body>
 </html>
