--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
   <button onclick="getProductFromTrolley()">Buscar un producto del carrito</button>
   <button onclick="findProducts()">Buscar productos</button>
   <button onclick="removeProductFromTrolley()">Eliminar producto del carrito</button>
+  <hr>
+  <h2>Piedra, papel o tijeas</h2>
+  <button onclick="game('piedra')">Piedra</button>
+  <button onclick="game('papel')">Papel</button>
+  <button onclick="game('tijeras')">Tijeras</button>
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
   <!-- <script src="js/03-conditionals.js"></script> -->
   <!-- <script src="js/04-iterations.js"></script> -->
   <!-- <script src="js/05-arrays.js"></script> -->
-  <script src="js/06-functions.js"></script>
+  <!-- <script src="js/06-functions.js"></script> -->
+  <script src="js/07-objects.js"></script>
 </body>
 </html>
