--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <button onclick="game('piedra')">Piedra</button>
   <button onclick="game('papel')">Papel</button>
   <button onclick="game('tijeras')">Tijeras</button>
+  <hr>
+  <h2>Challenge 15 - Adictos al juego</h2>
+  <button onclick="lanzamientoDados()">Tirar dados</button>
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
@@ -36,6 +39,8 @@
   <!-- <script src="js/04-iterations.js"></script> -->
   <!-- <script src="js/05-arrays.js"></script> -->
   <!-- <script src="js/06-functions.js"></script> -->
-  <script src="js/07-objects.js"></script>
+  <!-- <script src="js/07-objects.js"></script> -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="helpers/02-challenge16.js"></script>
 </body>
 </html>
