--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <!-- <script src="js/05-arrays.js"></script> -->
   <!-- <script src="js/06-functions.js"></script> -->
   <!-- <script src="js/07-objects.js"></script> -->
+  <script src="js/08-poo.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="helpers/02-challenge16.js"></script>
+  <!-- <script src="helpers/02-challenge16.js"></script> -->
 </body>
 </html>
