--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Probando a JS</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="padding-bottom:200px">
   <h1 id="h1-de-prueba">Hola comisión 15i</h1>
   <button onclick="console.log('Click en el botón')">Haceme click</button>
   <hr>
@@ -32,6 +33,13 @@
   <hr>
   <h2>Challenge 15 - Adictos al juego</h2>
   <button onclick="lanzamientoDados()">Tirar dados</button>
+  <hr>
+  <h2 id="h2-to-change">DOM</h2>
+  <button onclick="changeText()">Haceme click para cambiar el texto del h2 de arriba</button>
+  <div id="testing-theme" class="testing-theme light"> Cambiando el tema </div>
+  <button onclick="changeTheme()" >Cambiar tema</button>
+  <div class="squares-container"></div>
+  <button onclick="addSquare()">Agregar cuadrado</button>
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
@@ -40,7 +48,8 @@
   <!-- <script src="js/05-arrays.js"></script> -->
   <!-- <script src="js/06-functions.js"></script> -->
   <!-- <script src="js/07-objects.js"></script> -->
-  <script src="js/08-poo.js"></script>
+  <!-- <script src="js/08-poo.js"></script> -->
+  <script src="js/09-bom&dom.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- <script src="helpers/02-challenge16.js"></script> -->
 </body>
