--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
   <button onclick="changeTheme()" >Cambiar tema</button>
   <div class="squares-container"></div>
   <button onclick="addSquare()">Agregar cuadrado</button>
+  <hr>
+  <h2>Capturing vs bubbling - events</h2>
+  <div id="padre">Lorem ipsum <strong id="hijo">dolor sit amet</strong>, consectetur adipisicing elit. Fugit placeat repudiandae asperiores pariatur nam reprehenderit corporis voluptatibus, voluptates, dolores hic eaque voluptatem atque cupiditate iusto molestiae nisi. Ipsa, consequuntur molestias?</div>
+  <hr>
+  <h2>Mascota cuadrado</h2>
+  <div class="corral">
+    <div class="pet"></div>
+  </div>
   <!-- <script src="js/00-intro.js"></script> -->
   <!-- <script src="js/01-strings.js"></script> -->
   <!-- <script src="js/02-math.js"></script> -->
@@ -49,7 +57,9 @@
   <!-- <script src="js/06-functions.js"></script> -->
   <!-- <script src="js/07-objects.js"></script> -->
   <!-- <script src="js/08-poo.js"></script> -->
-  <script src="js/09-bom&dom.js"></script>
+  <!-- <script src="js/09-bom&dom.js"></script> -->
+  <!-- <script src="js/10-event.js"></script> -->
+  <script src="js/11-JSON & web storage.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- <script src="helpers/02-challenge16.js"></script> -->
 </body>
