--- a/detail-product.html
+++ b/detail-product.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rolling Commerce</title>
+  <title>Página detalle</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- NAVBAR -->
+  <!-- NAVBAR -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Rolling Commerce</a>
+        <a class="navbar-brand" href="carrito.html">Rolling Commerce</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="carrito.html">Inicio</a>
             </li>
             <li class="nav-item">
               <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#carrito-modal">
@@ -36,29 +37,12 @@
       </div>
     </nav>
   </header>
-
-  <main class="container my-4 d-flex flex-wrap justify-content-between">
-    
-  </main>
-
-<!-- Modal -->
-<div class="modal fade" id="carrito-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body" id="cart-body">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Ir a pagar</button>
-      </div>
+  <main>
+    <div class="container mt-5" id="product-container">
+      
     </div>
-  </div>
-</div>
-
+  </main>
+  <script src="js/dom-project/detail.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="js/dom-project/carrito.js"></script>
 </body>
 </html>
