--- a/carrito.html
+++ b/carrito.html
@@ -26,11 +26,16 @@
                 Carrito
               </button>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./favs.html">
-                Favoritos
-              </a>
-            </li>
+            <a class="nav-link" href="./favs.html">
+              Favoritos
+            </a>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="nav-link" onclick="logout()">
+              Cerrar sesión
+            </button>
+          </li>
+          <li class="nav-item">
           </ul>
         </div>
       </div>
