--- a/login.html
+++ b/login.html
@@ -12,16 +12,53 @@
   <main class="big-bg bg-success d-flex flex-column justify-content-center align-items-center">
     <form onsubmit="login(event)">
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="values-email" placeholder="name@example.com" maxlength="40" required>
+        <input type="email" class="form-control" id="values-email-login" placeholder="name@example.com" maxlength="40" required>
         <label for="floatingInput">Email</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="values-password" placeholder="Password" maxlength="16" minlength="6" required>
+        <input type="password" class="form-control" id="values-password-login" placeholder="Password" maxlength="16" minlength="6" required>
         <label for="floatingPassword">Contraseña</label>
       </div>
       <button type="submit" class="btn btn-secondary mt-4">Ingresar</button>
     </form>
+    <a href="" class="text-danger fw-bold" data-bs-toggle="modal" data-bs-target="#register-modal">Si no tenes una cuenta, registrate acá</a>
   </main>
+  <!-- Modal -->
+  <div class="modal fade" id="register-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" >Registrate</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="register-body">
+          <form onsubmit="register(event)">
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="values-name" placeholder="pepito" maxlength="50" required>
+              <label for="floatingInput">Nombre</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="number" class="form-control" id="values-age" placeholder="XX" max="120" min="16" required>
+              <label for="floatingInput">Edad</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="values-email" placeholder="name@example.com" maxlength="40" required>
+              <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="password" class="form-control" id="values-password" placeholder="Password" maxlength="16" minlength="6" required>
+              <label for="floatingPassword">Contraseña</label>
+            </div>
+            <div class="form-floating">
+              <input type="password" class="form-control" id="values-password-2" placeholder="Password" maxlength="16" minlength="6" required>
+              <label for="floatingPassword">Repita contraseña</label>
+            </div>
+            <button type="submit" class="btn btn-secondary mt-4">Ingresar</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="js/dom-project/login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
