utilities and asynchronism

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body style="padding-bottom:200px">
+  <div id="navbar-container"></div>
   <h1 id="h1-de-prueba">Hola comisión 15i</h1>
   <button onclick="console.log('Click en el botón')">Haceme click</button>
   <hr>
@@ -59,7 +60,9 @@
   <!-- <script src="js/08-poo.js"></script> -->
   <!-- <script src="js/09-bom&dom.js"></script> -->
   <!-- <script src="js/10-event.js"></script> -->
-  <script src="js/11-JSON & web storage.js"></script>
+  <!-- <script src="js/11-JSON & web storage.js"></script> -->
+  <!-- <script src="js/12-utilities.js" type="module"></script> -->
+  <script src="js/13-asynchronism.js" type="module"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- <script src="helpers/02-challenge16.js"></script> -->
 </body>
