--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+  <div id="navbar-container"></div>
   <main class="big-bg bg-success d-flex flex-column justify-content-center align-items-center">
     <form onsubmit="login(event)">
       <div class="form-floating mb-3">
@@ -59,7 +60,7 @@
       </div>
     </div>
   </div>
-  <script src="js/dom-project/login.js"></script>
+  <script src="js/dom-project/login.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
